--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GreenLife Tracker - Caring for Life on Land 🌳</title>
+  <title>Chloris - Caring for Life on Land 🌳</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Playfair+Display:wght@600;700;800&display=swap" rel="stylesheet">
@@ -115,100 +115,43 @@
     }
   </style>
 </head>
+<!-- Keep your existing <head> section as-is -->
+
 <body>
   <div id="avatarDisplay" class="avatar-display" style="display: none;"></div>
 
   <section class="hero">
     <div class="hero-content">
-      <h1>GreenLife Tracker</h1>
+      <h1>Chloris</h1>
       <p>Caring for Life on Land 🌳</p>
       <p style="font-size: 1.3rem;">Track, Learn, and Protect our Planet</p>
       <div class="hero-buttons">
-        <a href="plant-tracker.html" class="btn">Get Started 🌱</a>
-        <a href="eco-tips.html" class="btn btn-secondary">Learn More 💡</a>
+        <!-- Removed Get Started Button -->
+        <a href="#learn-more" class="btn btn-secondary">Learn More 💡</a>
+        <a href="login.html" class="btn btn-outline">Login 🔐</a>
       </div>
     </div>
   </section>
 
-  <section class="features">
-    <div class="container">
-      <h2 style="text-align: center; font-size: 2.5rem; color: var(--dark-green); margin-bottom: 3rem;">Explore Our Features</h2>
-      <div class="features-grid">
-        <a href="plant-tracker.html" class="feature-card glass-card">
-          <div class="feature-icon">🌳</div>
-          <h3>Plant Growth Tracker</h3>
-          <p>Monitor and track your plant's growth journey with beautiful visualizations</p>
-        </a>
-
-        <a href="biodiversity.html" class="feature-card glass-card">
-          <div class="feature-icon">🗺️</div>
-          <h3>Biodiversity Map</h3>
-          <p>Explore diverse ecosystems and wildlife locations around the world</p>
-        </a>
-
-        <a href="eco-tips.html" class="feature-card glass-card">
-          <div class="feature-icon">💡</div>
-          <h3>Eco Tips</h3>
-          <p>Daily tips and advice for sustainable living and environmental care</p>
-        </a>
-
-        <a href="weather-advice.html" class="feature-card glass-card">
-          <div class="feature-icon">🌦️</div>
-          <h3>Weather Advice</h3>
-          <p>Get personalized environmental tips based on your local weather</p>
-        </a>
-
-        <a href="plant-health.html" class="feature-card glass-card">
-          <div class="feature-icon">🧠</div>
-          <h3>Plant Health Detector</h3>
-          <p>Upload plant photos to get instant health assessments and care tips</p>
-        </a>
-
-        <a href="community-wall.html" class="feature-card glass-card">
-          <div class="feature-icon">🪴</div>
-          <h3>Community Wall</h3>
-          <p>Share and explore beautiful nature photography from our community</p>
-        </a>
-
-        <a href="leaderboard.html" class="feature-card glass-card">
-          <div class="feature-icon">🏆</div>
-          <h3>Eco Leaderboard</h3>
-          <p>See top contributors making a difference for our planet</p>
-        </a>
-
-        <a href="avatar-customizer.html" class="feature-card glass-card">
-          <div class="feature-icon">🎨</div>
-          <h3>Avatar Customizer</h3>
-          <p>Personalize your eco-avatar and showcase your nature spirit</p>
-        </a>
-
-        <a href="nature-sounds.html" class="feature-card glass-card">
-          <div class="feature-icon">🎧</div>
-          <h3>Nature Sounds</h3>
-          <p>Relax with calming forest and rain soundscapes</p>
-        </a>
-
-        <a href="achievements.html" class="feature-card glass-card">
-          <div class="feature-icon">✨</div>
-          <h3>Achievements</h3>
-          <p>Unlock badges and celebrate your environmental milestones</p>
-        </a>
-
-        <a href="animal-stories.html" class="feature-card glass-card">
-          <div class="feature-icon">🦁</div>
-          <h3>Tales from the Wild</h3>
-          <p>Listen to wisdom and stories shared by our animal friends</p>
-        </a>
-
-        <a href="tree-stories.html" class="feature-card glass-card">
-          <div class="feature-icon">🌳</div>
-          <h3>Whispers of the Forest</h3>
-          <p>Ancient trees share their timeless wisdom and life stories</p>
-        </a>
-      </div>
-    </div>
+  <!-- ✨ NEW Learn More Section -->
+  <section id="learn-more" style="padding: 4rem 2rem; text-align: center; background: #f4f9f4;">
+    <h2 style="font-size: 2.5rem; color: #2e7d32; margin-bottom: 1rem;">About Chloris</h2>
+    <p style="max-width: 800px; margin: 0 auto; font-size: 1.2rem; color: #444;">
+      Chloris is an interactive platform dedicated to promoting environmental awareness,
+      sustainable practices, and the protection of biodiversity.  
+      <br><br>
+      🌱 Learn about plants, ecosystems, and conservation.  
+      🪴 Participate in eco-friendly challenges.  
+      🌳 Make your green journey count — one step at a time.
+    </p>
+    <br>
+    <a href="login.html" class="btn" style="background:#2e7d32; color:#fff; padding:1rem 2rem; border-radius:30px; text-decoration:none;">
+      Join the Movement 🌿
+    </a>
   </section>
 
+  <!-- 🗑️ Removed the entire features grid section -->
+  
   <footer class="footer">
     <div class="footer-content">
       <div class="social-icons">
@@ -217,11 +160,9 @@
         <a href="#" class="social-icon">🌳</a>
         <a href="#" class="social-icon">🌱</a>
       </div>
-      <p class="footer-text">Made with ❤️ for SDG 15 — Life on Land</p>
+      <p class="footer-text">Made by Group 17 for SDG 15 — Life on Land</p>
       <p style="color: #666; font-size: 0.9rem; margin-top: 0.5rem;">Building a sustainable future together</p>
     </div>
   </footer>
-
-  <script src="app.js"></script>
 </body>
 </html>
