--- a/plant-health.html
+++ b/plant-health.html
@@ -6,6 +6,11 @@
   <title>Plant Health Detector - GreenLife Tracker</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Playfair+Display:wght@600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <!-- Firebase App (core SDK) -->
+<script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
+<!-- Firebase Firestore -->
+<script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-firestore-compat.js"></script>
+
   <style>
     .upload-container {
       max-width: 600px;
@@ -100,7 +105,7 @@
   </style>
 </head>
 <body>
-  <a href="index.html" class="back-btn">← Back</a>
+  <a href="features.html" class="back-btn">← Back</a>
   <div id="avatarDisplay" class="avatar-display" style="display: none;"></div>
 
   <div class="container">
