--- a/weather-advice.html
+++ b/weather-advice.html
@@ -71,7 +71,7 @@
   </style>
 </head>
 <body>
-  <a href="index.html" class="back-btn">← Back</a>
+  <a href="features.html" class="back-btn">← Back</a>
   <div id="avatarDisplay" class="avatar-display" style="display: none;"></div>
 
   <div class="container">
